fixed scroll problem on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+main {
+  overflow-y: auto;
+}
+
 body {
   color: white;
   width: 100dvw;
